# rust-http-api

./: Cargo.toml
src/: main.rs
src/controllers/: types.rs  user.rs
src/db/: db.rs
src/models/: user.rs
src/services/: mod.rs  user.rs  user_test.rs
src/state/: app_state.rs  mod.rs
