[package]
name = "rust-http-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tower-http  = { version = "0.5.2", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
diesel = { version = "2.1.6", features = ["postgres", "uuid"] }

[profile.release]
strip = true
