[package]
name = "rust-http-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tower-http  = { version = "0.5.2", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
sqlx = { version = "0.7.4", features = ["postgres", "sqlx-postgres"] }
sea-orm = { version = "0.12.15", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }

[profile.release]
strip = true
